--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li><a href="./index.html" title="">Proyectos</a></li>
         <li><a href="./about.html" title="">Sobre mi</a></li>
         <li><a href="./services.html" title="">Servicios</a></li>
-        <li><a href="./form.html" title="">Servicios</a></li>
+        <li><a href="./form.html" title="">Form</a></li>
 
       </ul>
 
